--- a/src/index.css
+++ b/src/index.css
@@ -2,3 +2,9 @@
   padding: 0;
   margin: 0;
 }
+
+:root{
+  --background-box-color: linear-gradient(45deg, rgb(9, 9, 85) 33%, rgba(0, 0, 88, 1), rgba(13, 0, 133, 1));
+  --color-danger: red;
+  --padding-1: 1em
+}
