--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -1,5 +1,5 @@
 .footer{
-    background: linear-gradient(33deg, rgb(17, 0, 168) 33%, rgb(76, 0, 252) 50%, rgba(76, 0, 252,1) 50%);
+    background: var(--background-box-color);
     padding: 2.5% 5%;
     display: flex;
     flex-direction: row;
