--- a/src/styles/Navabar.css
+++ b/src/styles/Navabar.css
@@ -2,6 +2,7 @@
     display: flex;
     list-style: none;
     justify-content: space-evenly;
+    gap: 1em;
 }
 .nav--items ul a{
     text-decoration: none;
@@ -21,6 +22,8 @@
     background: yellow;
     color: black;
     border-radius: 15px;
+    font-weight: bold;
+    
 }
 .navbar{ 
     display: flex;
